# iris-agentic-dev

./: .gitignore  Cargo.toml  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml
crates/iris-agentic-dev-bin/: Cargo.toml
crates/iris-agentic-dev-bin/src/: main.rs
crates/iris-agentic-dev-bin/src/cmd/: benchmark.rs  mod.rs
crates/iris-agentic-dev-bin/tests/: benchmark_relocated_binary_tests.rs
crates/iris-agentic-dev-core/: Cargo.toml
crates/iris-agentic-dev-core/src/: generate.rs  lib.rs
crates/iris-agentic-dev-core/src/benchmark/: container.rs  llm.rs  mod.rs
crates/iris-agentic-dev-core/src/benchmark/tasks/jira_bugs/: 001-null-pointer-check.json  002-conditional-mandatory-validation.json  003-missing-error-context.json  004-save-without-required-field.json  005-status-not-updating.json  006-date-calculation-off-by-one.json  007-field-becomes-editable.json  008-validation-not-enforced.json  009-undefined-error-export.json  010-incorrect-date-sorting.json  011-barcode-scan-type-check.json  012-end-dated-records-showing.json  013-xss-html-injection.json  014-invalid-oref-after-delete.json  015-performance-degradation.json  016-missing-patient-reference.json  017-list-duplication.json  018-lookup-filter-not-working.json  019-duplicate-name-validation.json  020-incorrect-uom-conversion.json  021-retrospective-date-validation.json  056-multi-file-contract-change.json
crates/iris-agentic-dev-core/src/iris/: audit_log.rs  connection.rs  discovery.rs  server_manager.rs  workspace_config.rs
crates/iris-agentic-dev-core/src/manifest/: resolve.rs
crates/iris-agentic-dev-core/src/policy/: data_policy_gate.rs  env_gate.rs  gate.rs  mod.rs  patterns.rs  system_blocklist_gate.rs
crates/iris-agentic-dev-core/src/telemetry/: mod.rs  prune.rs  redact.rs  trace_export.rs
crates/iris-agentic-dev-core/src/tools/: admin.rs  dict.rs  global.rs  interop.rs  log_store.rs  mod.rs  observability.rs  scm.rs  skills_tools.rs  symbols_local.rs
crates/iris-agentic-dev-core/tests/: admin_e2e_tests.rs  admin_unit_tests.rs  discovery_tests.rs  docker_discovery_e2e.rs  interop_e2e_tests.rs  interop_unit_tests.rs  log_store_tests.rs  progressive_disclosure_integration.rs
crates/iris-agentic-dev-core/tests/fixtures/: config_data_policy_block.toml  config_global_blocklist.toml  config_live_template.toml
crates/iris-agentic-dev-core/tests/integration/: test_benchmark_live.rs  test_compile_cmd.rs  test_e2e.rs  test_e2e_all_tools.rs  test_handlers_live.rs  test_iris_admin_observability_live.rs  test_iris_global_live.rs  test_iris_test_e2e.rs  test_live_reload_e2e.rs  test_mcp_iris.rs  test_role_gate_e2e.rs  test_scm.rs  test_sql_power_live.rs  test_sql_safety_e2e.rs  test_sql_translate_e2e.rs  test_telemetry_live.rs  test_trace_export_live.rs
crates/iris-agentic-dev-core/tests/unit/: test_audit_log.rs  test_audit_phi_scrub.rs  test_benchmark_run_task_errors.rs  test_benchmark_scoring.rs  test_benchmark_task_loading.rs  test_data_policy_gate.rs  test_discovery_unit.rs  test_doc_params.rs  test_env_gate.rs  test_interop_depth_unit.rs  test_iris_admin_observability_unit.rs  test_iris_global_unit.rs  test_lift_math.rs  test_live_reload.rs  test_policy_gate.rs  test_role_gate_handlers.rs  test_server_manager.rs  test_system_blocklist.rs  test_telemetry_prune.rs  test_telemetry_query_filter.rs  test_telemetry_redact.rs  test_telemetry_types.rs  test_tools_mod_unit.rs  test_toolset.rs  test_trace_export.rs  test_workspace_config.rs
crates/iris-dev-core/: Cargo.toml
crates/iris-dev-core/src/iris/: connection.rs  workspace_config.rs
crates/iris-dev-core/src/tools/: mod.rs
crates/iris-dev-core/tests/integration/: test_e2e.rs  test_sql_safety_e2e.rs  test_sql_translate_e2e.rs
crates/iris-dev-core/tests/unit/: test_sql_safety.rs  test_sql_translate.rs
light-skills/: AGENTS.md  BENCHMARKING.md
light-skills/skills/ensemble-production/: SKILL.md
light-skills/skills/iris-objectscript-eval/: SKILL.md
light-skills/skills/iris-windows-iis-setup/: SKILL.md
scripts/: coverage.sh
specs/028-better-docker-discovery/: spec.md
specs/032-iris-test-http/: spec.md
specs/033-sql-safety-gate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/033-sql-safety-gate/checklists/: requirements.md
specs/033-sql-safety-gate/contracts/: iris_query.md
specs/034-live-connection-reload/: spec.md
specs/035-sql-macro-translate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/035-sql-macro-translate/checklists/: requirements.md
specs/035-sql-macro-translate/contracts/: iris_execute.md
specs/039-skills-e2e/: spec.md
specs/043-windows-native-iris/: tasks.md
specs/052-iris-global/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/055-system-observability/: plan.md  research.md  spec.md  tasks.md
specs/056-interop-depth/: plan.md  spec.md  tasks.md
specs/056-interop-depth/checklists/: requirements.md
specs/059-tool-telemetry-benchmark/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/059-tool-telemetry-benchmark/checklists/: requirements.md
specs/059-tool-telemetry-benchmark/contracts/: benchmark-cli.md  telemetry-mcp-tools.md
tests/e2e/: fixtures.py  harness.py  opencode_runner.py  test_opencode_runner.py  test_us2.py
tests/e2e/results/: skill-baseline.json  skill-eval-2026-05-31T174556.json  skill-eval-2026-05-31T175132.json  skill-eval-2026-05-31T175623.json  skill-eval-2026-05-31T175635.json  skill-eval-2026-05-31T180248.json  skill-eval-2026-05-31T180929.json  skill-eval-2026-05-31T180954.json  skill-eval-2026-05-31T181705.json  skill-eval-2026-05-31T183149.json  skill-eval-2026-05-31T183300.json  skill-eval-2026-05-31T185200.json  skill-eval-2026-05-31T185919.json  skill-eval-2026-05-31T193246.json  skill-eval-2026-05-31T194626.json  skill-eval-2026-05-31T194839.json  skill-eval-2026-05-31T195241.json  skill-eval-2026-05-31T205853.json  (+7 more)
vscode-iris-agentic-dev/: package.json
vscode-iris-dev/: package-lock.json  package.json
vscode-iris-dev/src/: extension.ts
(+16 files in other folders)
